--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PORT="8082"
+PORT=8082
+MONGODB_URL=mongodb+srv://fariha:aptech12345@cluster0.nf2c3.mongodb.net/aptechnn2?retryWrites=true&w=majority&appName=Cluster0
