--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.7.1"
   },
   "devDependencies": {
