--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=9000
 MONGODB_URL=mongodb+srv://fariha:aptech12345@cluster0.nf2c3.mongodb.net/aptechnn2?retryWrites=true&w=majority&appName=Cluster0
-KEY=YourSecretKey   
+KEY=YourSecretKe  
